##27297217-Alignment Fixed

--- a/src/app/pages/activities/activities.component.scss
+++ b/src/app/pages/activities/activities.component.scss
@@ -6,7 +6,6 @@
 .project-dropdown{
 	display: block;
     width: 100%;
-    height: calc(2.3rem + 2px);
     padding: 0.625rem 0.75rem;
     font-size: 1rem;
     line-height: 1.5;
